# lightup

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  game.c  game.h  game_aux.c  game_aux.h  game_examples.c  game_examples.h  game_ext.c  game_ext.h  game_private.c  game_private.h  game_solve.c  game_test.c  game_test_nnunes.c  game_test_thoguet.c  game_test_thperrier.c  game_text.c  game_tools.c  game_tools.h  history.c  history.h  history_test.c  main.c  model.c  model.h
android/: AndroidManifest.xml  download.sh
android/jni/src/: Android.mk  history.c
web/: demo.html  demo.js  game.html  game.js  game.wasm  lightup.js  stylesheets.css  test.wasm  wrapper.c
web/make-game-web/: Makefile  wrapper.c
web/make-game-web/src/: game_examples.c  game_examples.h  game_test.c  history.h  history_test.c
web/src/: game_text.h  history.c  history.h
